Made module for LoaderOverlay and fixed issue of overlay overflow. Also added a message param to be reusable.

--- a/src/stylesheets/Login.module.css
+++ b/src/stylesheets/Login.module.css
@@ -7,6 +7,7 @@
 }
 
 .login form {
+    overflow: hidden;
     position: relative;
     background-color: white;
     box-shadow: 0px 0px 6px var(--text);
